--- a/src/styles/RenderLandingPage.less
+++ b/src/styles/RenderLandingPage.less
@@ -45,10 +45,15 @@
 //  ADD THIS BACK IN WHEN YOU HAVE THE GRAPHS SECTION
 // }
 
+
+
 .view-more-data-btn-container {
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row;
     height: 44px;
-    width: 180px;
-    margin: 0 auto;
+    width: 300px;
+    margin: 0 auto 10%;
     text-align: center;
     margin-bottom: 10%;
 }
