Create necessary divs/styles for graphs-section within renderlandingpage.jsx

--- a/src/styles/RenderLandingPage.less
+++ b/src/styles/RenderLandingPage.less
@@ -45,10 +45,44 @@
 //  ADD THIS BACK IN WHEN YOU HAVE THE GRAPHS SECTION
 // }
 
+
+// Parent styles so each children <div> has the same attributes
 .graphs-section {
     display: flex;
     justify-content: space-evenly;
+    margin-bottom: 3%;
+    font-family: 'acumin';
 }
+
+// all .grant containers so each child has same attributes
+.grant {
+    text-align: center;
+    height: 100%;
+    font-size: 1.5rem;
+}
+
+// Tailored styles to middle <div> 
+.grant.rates-by-nationality-container {
+    margin-left: -15px;
+}
+
+// Parent styles
+.gr {
+    height: 165px;
+    width: 320px;
+    margin-bottom: 10%;
+}
+
+// Tailored styles to middle <img>
+.gr.nationality-img {
+    height: 175px;
+    width: 200px;
+    margin-bottom: 6.25%;
+    margin-left: -15px;
+}
+
+// .graphs-section END
+
 
 
 .view-more-data-btn-container {
