Add text-align to back-to-top css style renderlandingpage.less

--- a/src/styles/RenderLandingPage.less
+++ b/src/styles/RenderLandingPage.less
@@ -163,6 +163,7 @@
 .back-to-top {
     width: 8%;
     font-size: 1.2rem;
+    text-align: center;
     cursor: pointer;
     color: black;
     margin: 5% auto;
